--- a/src/app/sidebar/style.less
+++ b/src/app/sidebar/style.less
@@ -59,7 +59,7 @@
     }
     
     .storage{
-        background-color: #ffffff;
+        background-color: #eceff1;
         border-top: 1px solid #c8c8c8;
         bottom: 0;
         height: 60px;
@@ -68,6 +68,13 @@
         text-align: center;
         width: 100%;
         margin-bottom: 10px;
+        .storage-progressbar{
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        span{
+            padding-right: 20px;
+        }
     }
     
     .progress{
