--- a/src/app/files/modal-upload.html
+++ b/src/app/files/modal-upload.html
@@ -1,15 +1,15 @@
 <div class="modal-header">
+  <button class="bootbox-close-button close" type="button" ng-click="cancel()">
+    ×
+  </button>
   <h3 class="modal-title">上传文件</h3>
 </div>
 <div class="modal-body">
-  <div class="drop-box"
+  <div class="upload-box"
     ng-file-drop="onFileSelect($files)"
     ng-file-drag-over-class="drop-box-over"
-    ng-file-drag-over-delay="100">or drop files <div>here</div>
+    ng-file-drag-over-delay="100">
+    <div ng-file-select="onFileSelect($files)" class="upload-select"><a>选择要上传的文件</a></div>
+    <div class="upload-drop">也可以拖拽文件到该区域，完成上传</div>
   </div>
-</div>
-<div class="modal-footer">
-  <button class="btn btn-warning" ng-click="cancel()">
-    Cancel
-  </button>
 </div>
