--- a/src/app/upload-progress-dialog/template.html
+++ b/src/app/upload-progress-dialog/template.html
@@ -8,8 +8,8 @@
   <div class="dialog-body" ng-show="isMax">
       <div class="progress-item" id="ddupload_file_1_progress" ng-repeat="file in files">
           <img class="file-icon" src="./images/file_icon.png">
-          <span class="file-name" title="webappdigger.png">{{file.file.name}}</span>
-          <span class="file-size" ng-show = "file.progress == 100">{{file.file.fomateSize}}</span>
+          <span class="file-name" title="webappdigger.png">{{file.name}}</span>
+          <span class="file-size" ng-show = "file.progress == 100">{{file.fomateSize}}</span>
           <span class="file-progress" ng-hide = "file.progress == 100">
             <a style="width:{{file.progress}}%"></a>
           </span>
@@ -18,7 +18,7 @@
           </span>
           <span class="file-upload-success dialog-btn" ng-show = "file.progress == 100">         
           </span>
-          <span class="delete-upload dialog-btn" ng-hide = "file.progress == 100" ng-click="upload.abort()">          
+          <span class="delete-upload dialog-btn" ng-hide = "file.progress == 100" ng-click="file.upload.abort()">          
           </span>
       </div>
   </div>
