--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -178,3 +178,25 @@
         }
     }
 }
+
+//个人设置
+.user-info{
+    .modal-dialog{
+        width: 400px;
+    }
+    label{
+        padding-bottom: 0;
+    }
+    h5{
+        border-bottom: 1px solid #e5e5e5;
+        padding-bottom: 5px;  
+    }
+    .user-info .form-group{
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
+    
+    .save-button{
+        margin-top: 30px;
+    }
+}
