--- a/src/app/files/link-share/template.html
+++ b/src/app/files/link-share/template.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group input-password">
       <div class="col-sm-11 col-sm-offset-1">
-        <input type="{{linkSharePasswordType}}" class="form-control" placeholder="输入访问密码" ng-model="linkSharePassword0" ng-disabled="!linkSharePasswordShow">
+        <input type="{{linkSharePasswordType}}" class="form-control" placeholder="输入访问密码" ng-model="linkSharePassword" ng-disabled="!linkSharePasswordShow">
       </div>
       <div class="col-sm-11 col-sm-offset-1">
         <div class="checkbox">
