--- a/src/linkShare/header/style.less
+++ b/src/linkShare/header/style.less
@@ -4,7 +4,12 @@
 //      background-color: @header-ext-background-color;
         color: white;
         height: 40px;
-        
+        .logo{
+            width: 131px;
+            margin-top: 6px;
+            margin-left: 25px;
+            float: left;
+        }
         .button-group{
             margin-top: 5px;
         }
