--- a/src/linkShare/main/style.less
+++ b/src/linkShare/main/style.less
@@ -293,3 +293,28 @@
         width: 60px;
     }
 }
+
+//文件上传窗口
+.modal-upload{
+    .upload-box{
+        font-size: 16px;
+        border: 2px dashed #c6c6c6;
+        text-align: center;
+        height: 150px;
+        .upload-select:hover{
+            a{
+                text-decoration: underline;
+            }
+        }
+        .upload-select{
+            top: 40px;
+            margin: 0 auto;
+            width: 130px;
+            cursor: pointer;
+        }
+        .upload-drop{
+            position: relative;
+            top: 60px;
+        }
+    }
+}
