--- a/src/app/files/link-share/template.html
+++ b/src/app/files/link-share/template.html
@@ -66,7 +66,7 @@
     <h5>链接地址</h5>
     <div class="form-group">
       <div class="col-sm-9">
-        <input type="text" class="form-control" ng-model="share_url">
+        <input type="text" class="form-control" ng-model="link">
       </div>
       <div class="col-sm-3">
         <input type="button" class="btn btn-default form-control" value="复制" clip-copy="getTextLinkUrl()">
