--- a/src/linkShare/app.css
+++ b/src/linkShare/app.css
@@ -90,6 +90,12 @@ body {
   color: white;
   height: 40px;
 }
+.header-view .header-top .logo {
+  width: 131px;
+  margin-top: 6px;
+  margin-left: 25px;
+  float: left;
+}
 .header-view .header-top .button-group {
   margin-top: 5px;
 }
@@ -631,4 +637,130 @@ body {
 .link-detail .owner-info {
   float: left;
   width: 60px;
+}
+.modal-upload .upload-box {
+  font-size: 16px;
+  border: 2px dashed #c6c6c6;
+  text-align: center;
+  height: 150px;
+}
+.modal-upload .upload-box .upload-select:hover a {
+  text-decoration: underline;
+}
+.modal-upload .upload-box .upload-select {
+  top: 40px;
+  margin: 0 auto;
+  width: 130px;
+  cursor: pointer;
+}
+.modal-upload .upload-box .upload-drop {
+  position: relative;
+  top: 60px;
+}
+.upload-progress-dialog {
+  display: none;
+  position: absolute;
+  z-index: 99999;
+  right: 20px;
+  bottom: 0;
+  width: 495px;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
+.upload-progress-dialog .dialog-header {
+  height: 30px;
+  line-height: 30px;
+  background: #1F69BA;
+  color: white;
+  padding: 0 10px;
+  font-size: 16px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.upload-progress-dialog .dialog-title {
+  float: left;
+}
+.upload-progress-dialog .dialog-btn {
+  background-image: url(../../images/uploading_icons.png);
+  float: right;
+  width: 13px;
+  height: 14px;
+  margin-right: 4px;
+  margin-top: 7px;
+  cursor: pointer;
+}
+.upload-progress-dialog .btn-max {
+  background-position: 0 -56px;
+  background-repeat: no-repeat;
+}
+.upload-progress-dialog .btn-min {
+  background-position: 0 0px;
+}
+.upload-progress-dialog .btn-close {
+  background-position: 0 -14px;
+}
+.upload-progress-dialog .dialog-body {
+  height: 288px;
+}
+.upload-progress-dialog .progress-item {
+  height: 30px;
+  border-bottom: 1px solid #c6c6c6;
+  margin: 0px 2px;
+  box-sizing: content-box;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.upload-progress-dialog .progress-item button {
+  position: relative;
+  height: 20px;
+  margin-top: 4px;
+}
+.upload-progress-dialog .progress-item .file-icon {
+  float: left;
+  margin-right: 4px;
+  margin-top: 4px;
+  width: 15px;
+}
+.upload-progress-dialog .file-name {
+  width: 180px;
+  float: left;
+  padding-top: 4px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.upload-progress-dialog .file-size {
+  width: 85px;
+  float: left;
+  padding-top: 4px;
+}
+.upload-progress-dialog .file-progress {
+  width: 100px;
+  height: 8px;
+  border: 1px solid #c6c6c6;
+  float: left;
+  margin-top: 10px;
+}
+.upload-progress-dialog .file-progress-size {
+  padding-top: 4px;
+  float: left;
+}
+.file-upload-success {
+  background-position: 0 -26px;
+  float: right;
+}
+.delete-upload {
+  background-position: 0 -42px;
+  float: right;
+}
+.upload-progress-dialog .file-progress a {
+  display: block;
+  background: #4A9AFD;
+  height: 100%;
+  width: 0%;
+}
+.upload-progress-dialog .file-status {
+  width: 50px;
 }
