use perfect scrollbar

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -9,6 +9,17 @@
   height: 100%;
   position: relative;
   min-width: 600px;
+
+  .scroller {
+    overflow-y: hidden;
+    bottom: 30px;
+    left: 0;
+    margin-left: 40px;
+    right: 0;
+    top: 138px;
+    position: absolute;
+  }
+
   .file-row{
     height: 65px;
     border-bottom: 1px solid #cfcfcf; 
@@ -96,13 +107,6 @@
      }
   }
   .folder-grid {
-     bottom: 30px;
-     left: 0;
-     margin-left: 40px;
-     overflow-y: auto;
-     right: 0;
-     top: 138px;
-     position: absolute;
     .table{
        height : 100%;      
        bottom: 30px;
@@ -414,11 +418,13 @@
     img{
         float: left;
     }
-    .disc-item-list{
+    .scroller {
         bottom: 210px;
-        overflow-y: auto;
+        overflow-y: hidden;
         position: absolute;
         top: 64px;
+        left: 0;
+        right: 0;
     }
     
     .disc-item{
