--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -309,6 +309,7 @@
                 }
             }
             .delete-group{
+                cursor: pointer;
                 display: none;
                 float: right;
             }
@@ -345,10 +346,12 @@
             margin-right: 8px;
         }
         .user-permission{
-            cursor: pointer;
             float: left;
             position: relative;
             width: 80px;
+            span{
+                cursor: pointer;
+            }
             .caret{
                 display: none;            
             }
@@ -362,6 +365,7 @@
         }
         .delete-user{
             float: right;
+            cursor: pointer;
             display: none; 
         }
     }
