fix filelist style issues

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -189,10 +189,11 @@
     width: 30%;
     float: left;
     padding-top: 10px;
-    min-width: 315px;
     padding-left: 8px;
+    position: relative;
     .rename-form{
-        float: left;
+        position: absolute;
+        left: 50px;
         width: 260px; 
     }
     .rename-buttonGroup{
