fix file list style issue

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -23,6 +23,7 @@
   .file-row{
     height: 65px;
     border-bottom: 1px solid #cfcfcf; 
+    overflow: hidden;
   }
   .file-row:hover{
       background-color: #ebf1f7;
@@ -81,7 +82,7 @@
      border-bottom: 1px solid #afafaf;
      color: #676767;
      .title-checkbox{
-         padding: 8px;
+        width: 4%;
      }
      .title-name{
          width: 30%;
@@ -163,7 +164,7 @@
   
   .input-checkbox-td{
     padding-top: 20px;
-    width: 30px;
+    width: 4%;
     padding-left: 8px;
     padding-right: 8px;
     float: left;
