--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -686,6 +686,9 @@
           overflow-y: auto;
           .disc-item{
             padding: 10px;
+            img{
+              float: left;
+            }
             .disc-box{
               margin-left: 35px;
               .disc-name{
