--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -16,9 +16,9 @@
 		</div>
 		<div class="notif_box" class="message-notice pull-right">
 			<span class="notice" title="通知"></span>
-			<label class="message-count notice-count" ng-show = "showMessageCount">{{messageCount}}</label>
+			<label class="message-count notice-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
 			<span class="message" title="消息"></span>
-			<label class="message-count letter-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
+			<label class="message-count letter-count" ng-show = "showMessageCount">{{messageCount}}</label>
 		</div>
 	</div>
 	<div class="header-search" role="navigation">
