--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -6,12 +6,12 @@
         	所有文件
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('updates') }">
+<!--     <li ng-class="{ active: $state.includes('updates') }">
       <a ui-sref="updates" class="updates">
         <span class="updates-img"></span>
         	最近更新
       </a>
-    </li>
+    </li> -->
     <li ng-class="{ active: $state.includes('contacts') }">
       <a ui-sref="contacts" class="contacts">
         <span class="contacts-img"></span>
