--- a/src/app/trash/style.less
+++ b/src/app/trash/style.less
@@ -4,6 +4,16 @@
   height: 100%;
   position: relative;
   min-width: 600px;
+  
+  .scroller {
+    overflow-y: hidden;
+    bottom: 30px;
+    left: 0;
+    margin-left: 40px;
+    right: 0;
+    top: 138px;
+    position: absolute;
+  }
   .file-row{
     height: 65px;
     border-bottom: 1px solid #cfcfcf; 
@@ -90,14 +100,15 @@
        padding: 8px;
      }
   }
+  
   .folder-grid {
-     bottom: 30px;
-     left: 0;
-     margin-left: 40px;
-     overflow-y: auto;
-     right: 0;
-     top: 138px;
-     position: absolute;
+//   bottom: 30px;
+//   left: 0;
+//   margin-left: 40px;
+//   overflow-y: auto;
+//   right: 0;
+//   top: 138px;
+//   position: absolute;
     .table{
        height : 100%;      
        bottom: 30px;
