--- a/src/app/contacts/style.less
+++ b/src/app/contacts/style.less
@@ -1,2 +1,231 @@
 .contacts-view {
+
+}
+
+.top-bar{
+  height: 45px;
+  padding-left: 40px;
+  padding-top: 12px;
+  font-size: 15px;
+  .folder-crumb{
+    margin-left: 5px;
+  }
+  .root-path a{
+    color: #676767;
+    position: relative;
+    top: 1px;
+  }
+  .root-path.isRoot a{
+    color: #676767;
+  }
+  .root-path a:hover, .root-path a:focus{
+    text-decoration: none;
+  }
+  .folder-crumb a{
+    color: #aeaeae;
+    position: relative;
+    top: 2px;
+  }
+  .folder-crumb a:hover, .folder-crumb a:focus{
+    text-decoration: none;
+  }
+  .folder-crumb:last-child{
+    a{
+      color: #676767;
+    }
+  }
+}
+.top-bar-bottom{
+  height: 6px;
+  background-size: 100% 100%;
+  background-image: url("../../images/top_shadow.png");
+}
+
+/******************contact Start****************************************************/
+#contact .col {
+    float: left;
+    height: 34px;
+    line-height: 34px;
+}
+
+#contact .col-contact_nametop {
+    float: left;
+    height: 34px;
+    line-height: 34px;
+    width: 25%
+}
+
+#contact .col-action {
+    float: left;
+    height: 34px;
+    line-height: 34px;
+    width: 10%
+}
+
+#contact .col-contact_uname {
+    float: left;
+    height: 34px;
+    line-height: 34px;
+    width: 25%
+}
+
+#contact .col-contact_email {
+    float: left;
+    height: 34px;
+    line-height: 34px;
+    width: 25%
+}
+
+#contact .col{
+	float: left;
+    height: 24px;
+    line-height: 24px;
+}
+
+#contact .contact-item {
+    padding: 3px 3px 3px 41px;
+    border-bottom: 1px solid #E8E8E8;
+}
+
+.contact-toolbar-button{
+	margin-left: 34px;
+}
+
+.contact-toolbar-button button{
+	font-size: 15px;
+    height: 30px;
+    color: #4A9AFD;
+    padding: 0 0px;
+    border:none;
+    border-radius: 0;
+    background-image: none;
+    background-color: transparent;
+    -webkit-transition: all .30s ease-out;
+    -moz-transition: all .30s ease-out;
+    -o-transition: all .30s ease-out;
+    transition: all .30s ease-out;
+}
+
+#contact .toolbar{
+	position: absolute;
+	height:107px;
+	left: 3%;
+	right: 5%;
+	top: 87px;
+	border: 1px solid #CCC;
+	border-bottom: none;
+	border-radius: 3px 3px 0 0;
+	background-color: white;	
+}
+
+
+
+#contact_list {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #FFFFFF;
+    border-color: -moz-use-text-color #CCCCCC #CCCCCC;
+    border-image: none;
+/*    border-radius: 3px;*/
+    border-style: none solid solid;
+    border-width: medium 1px 1px;
+    bottom: 40px;
+    left: 3%;
+    position: absolute;
+    right: 5%;
+    top: 135px;
+}
+
+.contact-toolbar-button button:hover{
+	background-color: #4A9AFD;
+	color: white;
+	-webkit-transition: all .30s ease-out;
+    -moz-transition: all .30s ease-out;
+    -o-transition: all .30s ease-out;
+    transition: all .30s ease-out;	
+}
+
+#contact .col-contact_name{
+	width: 25%;
+}
+
+
+#contact .col-contact_usname {
+    width: 25%;
+}
+
+#contact .col-action {
+    width: 10%;
+    font-size: 18px;
+}
+
+#contact .contact-item:hover{
+	background: none repeat scroll 0 0 #F0F0F0;
+}
+
+#contact .contact-item .more-btn {
+    display: none;
+    line-height: 24px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+#contact .contact-item .more-btn i{
+    margin-left:10px;
+}
+#contact .contact-item:hover .more-btn {
+    display:block;
+}
+
+#contact .tbody{
+	overflow-y: scroll;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 20px;
+	top: 0px;
+}
+
+#contact .contact-title{
+	color: #333333;
+    font-size: 18px;
+    height: 50px;
+    line-height: 40px;
+    margin-left: 36px;
+}
+
+#contact .accepted{
+	color: #FF6B71;
+}
+
+
+table.gridtable {
+  margin-left: 35px;
+  font-size:12px;
+  border-collapse: collapse;
+  width:100%;
+  line-height: 24px;
+}
+table.gridtable tr {
+  border-bottom: 1px solid #e8e8e8;
+  border-left: none;
+  border-right: none;
+  border-top:none;
+}
+table.gridtable th {
+  color: #333333;
+  font-weight: bold;
+  padding: 8px;
+}
+table.gridtable td {
+  color: #999999;
+  padding: 8px;
+}
+
+input.actionbutton {
+  width: 14px;
+  height: 14px;
+  //display: none;
 }
