--- a/src/app/files/preview-file/template.html
+++ b/src/app/files/preview-file/template.html
@@ -12,7 +12,7 @@
     <div class="txt-preview" ng-show = "fileType == 'txt'" ng-bind-html = "previewValue">
 
     </div>
-    <div class="office-preview" ng-show = "fileType == 'office'" ng-bind-html = "previewValue">
+    <div class="office-preview" ng-show = "fileType == 'office' || fileType == 'pdf'" ng-bind-html = "previewValue">
 
     </div>
   </div>
